--- a/links.html
+++ b/links.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archanjo Adestramento - LINKS</title>
-    <link rel="stylesheet" href="style/style.css">
+    <title>LINKS - Archanjo Adestramento</title>
+    <link rel="stylesheet" href="css/links-style.css">
 </head>
 <body>
     <div class="blococor">
