--- a/links.html
+++ b/links.html
@@ -33,6 +33,8 @@
 
             <p><a href="https://zawar.com.br/" target="_blank">Desconto na ZAWAR. CUPOM: ARCHANJO</a></p>
 
+            <p><a href="https://www.amazon.com.br/shop/archanjoadestramento" target="_blank">Minha loja na Amazon</a></p>
+
             <!-- <p><a href="https://www.tiktok.com/@archanjoadestramento" target="_blank">TikTok</a></p>
 
             <p><a href="https://www.youtube.com/channel/UCWmK0YAJF11uXko3TjG-47w" target="_blank">YouTube</a></p> -->
