Iniciando uma nova pagina teste para o index.html

--- a/links.html
+++ b/links.html
@@ -25,15 +25,15 @@
 
     <main>
         <article>
-            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfSfwO6uX92-ebp4BQv4ku6Vv9rdvOSXZQf21MobnS15hSblg/viewform" target="_blank">AGENDAR ADESTRAMENTO PRESENCIAL</a></p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSfwO6uX92-ebp4BQv4ku6Vv9rdvOSXZQf21MobnS15hSblg/viewform" target="_blank">AGENDAR ADESTRAMENTO PRESENCIAL</a>
 
-            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSe97YBduD_5OV3_UB3TT-om8cXEXA7ZhQCRjP2uEMW6N5uvmQ/viewform" target="_blank">AGENDAR CONSULTORIA ONLINE</a></p>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSe97YBduD_5OV3_UB3TT-om8cXEXA7ZhQCRjP2uEMW6N5uvmQ/viewform" target="_blank">AGENDAR CONSULTORIA ONLINE</a>
 
-            <p><a href="https://www.petz.com.br/parceiro/archanjoadestramento" target="_blank">10% de desconto na PETZ. CUPOM: 10PARCEIROPETZ</a></p>
+            <a href="https://www.petz.com.br/parceiro/archanjoadestramento" target="_blank">10% de desconto na PETZ. CUPOM: 10PARCEIROPETZ</a>
 
-            <p><a href="https://zawar.com.br/" target="_blank">Desconto na ZAWAR. CUPOM: ARCHANJO</a></p>
+           <a href="https://zawar.com.br/" target="_blank">Desconto na ZAWAR. CUPOM: ARCHANJO</a>
 
-            <p><a href="https://www.amazon.com.br/shop/archanjoadestramento" target="_blank">Minha loja na Amazon</a></p>
+            <a href="https://www.amazon.com.br/shop/archanjoadestramento" target="_blank">Minha loja na Amazon</a>
 
             <!-- <p><a href="https://www.tiktok.com/@archanjoadestramento" target="_blank">TikTok</a></p>
 
